<resources>
    <string name="app_name">老吾老</string>
    <string name="urls_header">Visit following link in browser</string>
    <string name="button_remote_control_on">Enable remote control</string>
    <string name="button_remote_control_off">Disable remote control</string>
    <string name="button_start">Start screen sharing</string>
    <string name="button_stop">Stop screen sharing</string>
    <string name="button_control">Control other device</string>
    <string name="no_active_connections">No Wi-Fi connection</string>
    <string name="action_settings">Settings</string>
    <string name="general_header">General</string>
    <string name="port_title">Port</string>
    <string name="port_description">Server port for incoming connections. Allowed values: 1025-65535.\nDefault: 8080.</string>
    <string name="adaptive_banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adaptive_banner_ad_unit_id">ca-app-pub-6312357173588580/8818719441</string>
    <string name="ask_admin_permission">Provide admin permission for screen lock</string>
    <string name="port_in_use">Error: the port %d is already in use.</string>
    <string name="add_contact">Add Contact</string>
    <string name="share_my_screen_off">Share My Screen - OFF</string>
    <string name="share_my_screen_on">Share My Screen - ON</string>
    <string name="remote_control_off">Remote Control - OFF</string>
    <string name="remote_control_on">Remote Control - ON</string>
    <string name="contacts">Contacts</string>
    <string name="share_screen_text">Joe would like to share his screen with you</string>
</resources>
